// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-control-label css-2ldf03"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-1iskwod"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;

exports[`props should render htmlFor 1`] = `
<div
  class="wp-components-control-label css-2ldf03"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-1iskwod"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
    for="Field"
  >
    Label
  </label>
</div>
`;

exports[`props should render no truncate 1`] = `
<div
  class="wp-components-control-label css-2ldf03"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-text wp-components-control-label css-12n5bn0"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-control-label css-e5fr2"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  <label
    class="wp-components-truncate wp-components-text wp-components-control-label css-1iskwod"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    Label
  </label>
</div>
`;
